feat(email): email suppression groups
